2020-11-03  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* mu-cite.el: Require `pym' (issue #4).

2020-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-register.el: Autoload pces for *-as-coding-system functions.
	(mu-registration-file-coding-system-for-write): Add custom type.

2020-10-12  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* mu-cite.el (mu-cite-get-field-value): Unfold the value,
	and remove leading/trailing white spaces from the value (PR#2).
	(timezone-parse-date): Autoload (issue #1).

2019-08-04  Ken Sato  <ksato9700>

	* mu-cite-pkg.el: New file (PR#1 in cvs-m17n-org/MU-CITE).

2019-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-get-original-header): Use original timezone.

2018-08-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-get-original-header): Make the return value
	compatible with the M$ O*tlook style.

2018-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-default-methods-alist): Add a new method
	`top-posting'.  See the doc-string of `mu-cite-get-original-header'
	for the usage.
	(mu-cite-get-original-header): New function.

2014-06-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-register.el (mu-cite-get-no-prefix-register-verbose-method):
	New function.
	(mu-cite-get-prefix-register-verbose-method): Work for it.

	* mu-cite.el (mu-cite-default-methods-alist):
	Add a new method `no-prefix-register-verbose'.
	(mu-cite-original): Register a name before generating top cite form.
	(fill-column-for-fill-cited-region): Don't use default-fill-column.
	(string-compare-from-top): Replace sref with aref.

2012-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-remove-text-properties): Fix mismatched paren in
	XEmacs part.

2010-06-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* MU-CFG: Don't load poe twice; add emu subdirectory to load-path
	when LISPDIR is specified.

2009-05-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* README.en (Bug reports): Remove.
